@@ -209,6 +209,9 @@ PIG-1309: Map-side Cogroup (ashutoshc)
 
 BUG FIXES
 
+PIG-1672: order of relations in replicated join gets switched in a query where
+ first relation has two mergeable foreach statements (thejas)
+
 PIG-1666: union onschema fails when the input relation has cast from bytearray to another type (thejas)
 
 PIG-1655: code duplicated for udfs that were moved from piggybank to builtin (nrai via daijy)
